infrastructure/connect/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: connect
  name: connect
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: connect
  sessionAffinity: None
  type: ClusterIP
