infrastructure/connect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connect
  namespace: default
spec:
  rules:
  - host: connect.wisv.ch
    http:
      paths:
      - backend:
          service:
            name: connect
            port: 80
  tls:
  - hosts:
    - connect.wisv.ch
    secretName: wisvch-tls
